# emberglow-keyboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  enumeration.py  pyproject.toml  relay.py  test-keyboard.py
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  PROTOCOL.md  WEBHOOKS.md
emberglow/: __init__.py  cli.py  keyboard.py  server.py  states.py
examples/: claude-code-settings.json  emberglow-hook
tests/: conftest.py  test_e2e.py  test_keyboard.py  test_server.py  test_states.py
